--- a/src/main/webapp/lab_institution.xhtml
+++ b/src/main/webapp/lab_institution.xhtml
@@ -123,7 +123,7 @@
                                         <p:inputText autocomplete="off" id="txtWeb" value="#{institutionController.current.web}"  ></p:inputText>
                                         
                                         <h:outputText id="lblBank" value="Bank" ></h:outputText>
-                                        <au:completeBank_Branch value="#{institutionController.current.bank}" />
+                                        <au:completeBank_Branch value="#{institutionController.current.bankBranch}" />
                                         
                                         <h:outputText id="lblAcc" value="Account No" ></h:outputText>
                                         <p:inputText autocomplete="off" id="txtAcc" value="#{institutionController.current.accountNo}"  ></p:inputText>
